res/html/assets/css/mobilestyle.css
/* fallback */
/*
@font-face {
    font-family: 'Material Symbols Outlined';
    font-style: normal;
    font-weight: 100 700;
    src: url("fonts/google-icons.woff2") format('woff2');
}

.material-symbols-outlined {
    font-family: 'Material Symbols Outlined';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
}
*/

.material-symbols-outlined {
    font-family: 'Material Symbols Outlined';
    font-style: normal;
    font-size: 20px;
    line-height: 1;
    display: inline-block;
    white-space: nowrap;
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
}

.music-icons { /*change when new emojis get put in*/
    margin-left: auto;
    margin-right: 0px;
    margin-bottom: 15px;
    width: auto;
    top: 0;
}

.music-icons i.material-symbols-outlined {
    margin-right: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 1px;
    padding-right: 1px;
    cursor: pointer;
}

.music-icons i.material-symbols-outlined:hover {
    background-color: #333;
    border-radius: 50%;
}

.disableMusicIcon {
    pointer-events: none;
    opacity: 0.5;
}

body {
    background-color: #111;
    color: #fff;
    font-family: 'Courier New', Courier, monospace;
    text-align: center;
    margin: 0;
    padding: 0;
}

.sticky-container {
    position: sticky;
    height: 100px;
    top: 0;
    background-color: #111;
    z-index: 1000;
    display: flex;
    flex-direction: column;
}

.sticky-container p,
.sticky-container .text {
    margin: 0;
}

.sticky-container p {
    flex: 1;
}

.sticky-container .text {
    margin-left: 10px;
}

.search-sort {
    display: flex;
    align-items: center;
    padding-top: 10px;
}

.guide-text {
    display: inline-flex;
    flex-direction: row;
    width: 100%;
    font-size: 14px;
    padding-top: 10px;
}

.song-info-text {
    text-align: left;
}

.difficulty-info-text {
    text-align: right;
}

.song-info-text p {
    margin: 0;
    margin-left: 70px;
}

.difficulty-info-text p {
    margin: 0;
    margin-right: 10px;
    margin-left: calc(100vw - 200px);
}

#quicksearch {
    font-family: 'Courier New', Courier, monospace;
    width: 85%;
    height: 50px;
    padding-left: 10px;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    transition: box-shadow 0.3s ease;
}

#quicksearch:focus {
    font-family: 'Courier New', Courier, monospace;
    outline: none;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.sort-dropdown { /* TODO */
    position: absolute;
    width: 100px;
    top: 170px;
    padding: 8px;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    background-color: #333;
    color: #fff;
}

.sort-dropdown:focus {
    outline: none;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

.sort-dropdown.show-options {
    opacity: 1;
}

.sort-button {
    padding: 5px 10px;
    background-color: #333;
    height: 50px;
    width: 100px;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    transition: background-color 0.3s;
    font-size: 24px;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    margin-right: 10px;
    margin-left: auto;
}

.container {
    margin-bottom: 100px;
}

.search-test {
    visibility: hidden;
}

.emojis-container {
    position: absolute;
    font-size: 36px;
    text-align: center;
    left: 30px;
    right: 30px;
    width: calc(100vw - 60px);
    top: 65px;
    justify-content: space-evenly;
    display: flex;
    align-items: center;
}

.moon {
    display: inline-block;
    margin-right: -10px;
    transition: transform 0.3s ease;
    position: relative;
    cursor: pointer;
}

.moon:hover,
.moon.hovered {
    transform: scale(1.3);
}

.text {
    position: relative;
    cursor: default;
}

.text p {
    margin-bottom: 5px;
    font-weight: bold;
    font-size: 16px;
    color: #fff;
    cursor: default;
}

.grid {
    border: 1px solid #333;
}

.grid:after {
    content: '';
    display: block;
    clear: both;
}

.song-element {
    position: relative;
    display: flex;
    align-items: center;
    height: 70px;
    width: 100%;
    margin: 5px 0px;
    padding: 0 10px;
    background: #181818;
    color: #262524;
    overflow: hidden;
    border-radius: 2px;
    cursor: pointer;
    box-sizing: border-box;
}

.image-container {
    width: 50px;
    height: 50px;
    margin-right: 10px;
    overflow: hidden;
    position:absolute;
}

.image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 8px;
}

.song-info {
    flex: 1;
    display: flex;
    align-items: center;
}

.info-text {
    flex: 1;
    display: flex;
    flex-direction: column;
    width: 60%;
}

.song-title,
.artist,
.length {
    font-size: 12px;
    margin: 0;
    color: white;
    text-align: left;
    max-width: 50%; /* CHANGE THIS FOR MAX WIDTH*/
    padding-left: 60px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.song-title {
    font-weight: bold;
}

.gold-text {
    font-size: 12px;
    margin: 0;
    white-space: nowrap;
    text-align: left;
    color: gold;
    text-shadow: 0 0 5px gold, 0 0 10px gold, 0 0 15px gold;
}



.noteDensity {
    position: absolute;
    font-size: 12px;
    margin-left: auto;
    right: 10px;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes slideIn {
    from {
        transform: translateY(-50px);
    }

    to {
        transform: translateY(0);
    }
}

.now-playing-container {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 99999;
    display: flex;
    justify-content: center;
    align-items: center;
}

.now-playing {
    background-color: #333;
    padding: 20px;
    border-radius: 5px;
}

.now-playing .back-to-list {
    background-color: #4CAF50;
    color: #fff;
    padding: 10px 15px;
    border: none;
    cursor: pointer;
    font-size: 14px;
    border-radius: 5px;
    transition: background-color 0.3s ease;
    font-family: 'Courier New', Courier, monospace;
}

.now-playing .back-to-list:hover {
    background-color: #45a049;
}

.undo-button {
    position: absolute;
    bottom: -200px;
    left: 50%;
    transform: translateX(-50%);
    padding: 8px 16px;
    background-color: #333;
    color: #fff;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    transition: bottom 0.3s ease;
}

.sort-container.active .undo-button {
    bottom: 10px;
}

footer {
    color: #fff;
    background-color: #282831;
    display: flex;
    align-items: center;
    position: fixed;
    width: 100%;
    height: 70px;
    bottom: 0;
}

.progress-container {
    position: fixed;
    bottom: 0;
    left: 70px;
    right: 10px;
    width: calc(100% - 80px);
    height: 10px;
    background-color: #555;
    border-radius: 5px;
    margin-bottom: 10px;
    z-index: 999;
}

#progressBar {
    width: 0px;
    height: 100%;
    background-color: hotpink;
    border-radius: 5px;
}

footer img {
    margin-right: 10px;
    margin-left: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 50px;
    width: 50px;
    border-radius: 10px;
}

.np-info-container {
    position: relative;
}

:root {
    --max-width: calc(100vw - 190px);
}

#npTitle,
#npArtist {
    margin-top: 0px;
    font-size: 12px;
    padding-left: 0px;
    padding-right: 10px;
    text-align: left;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: var(--max-width);
}

#npTitle {
    margin-bottom: 4px;
}

#npArtist {
    margin-bottom: 12px;
}

.end-text {
    text-align: center;
    font-size: 12px;
    margin-top: 20px;
    margin-left: 10px;
    margin-right: 10px;
    font-style: italic;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 9998;
    backdrop-filter: blur(2px);
}

.np-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 99998;
    backdrop-filter: blur(2px);
}

.sort-container {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 60%;
    background-color: rgba(40, 40, 49, 1);
    z-index: 9999;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 20px;
}

.difficulty-text {
    position: absolute;
    top: 12px;
    left: 20px;
}

.sort-text {
    position: absolute;
    top: 120px;
    left: 20px;
}

.close-button {
    position: absolute;
    top: 20px;
    right: 50px;
    display: inline-block;
    padding: 8px 16px;
    background-color: #333;
    color: #fff;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    transition: bottom 0.3s ease;
}

#debugSongs {}

